--- a/uv/themes/uv-cy-GB-theme/css/uv-seadragon-extension/theme.css
+++ b/uv/themes/uv-cy-GB-theme/css/uv-seadragon-extension/theme.css
@@ -25,8 +25,8 @@
 #app .overlay.embed .middle .secondRow textarea.code {
   width: 100%;
   height: 90px;
-  background: #ffffff;
-  border: 1px solid #bbbbbb;
+  background: #efefef;
+  border: 1px solid #9a9a9a;
   font-size: 11px;
 }
 #app .overlay.embed .middle .secondRow .sizes {
@@ -40,13 +40,13 @@
   text-align: center;
 }
 #app .overlay.embed .middle .secondRow .size {
-  border: 1px solid #bbbbbb;
+  border: 1px solid #9a9a9a;
   float: left;
   margin: 0 10px 0 0;
 }
 #app .overlay.embed .middle .secondRow .size.selected {
-  border: 1px solid #869f33;
-  background: #cadb90;
+  border: 1px solid #14a4c3;
+  background: #7eddf2;
 }
 #app .overlay.embed .middle .secondRow .size.selected p {
   font-weight: bold;
@@ -145,7 +145,7 @@
   padding: 0;
 }
 #app .overlay.download .middle ol.options li.group {
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid #efefef;
 }
 #app .overlay.download .middle ol.options li.group:last-child {
   border-bottom: none;
@@ -265,8 +265,8 @@
   margin: 0 0 20px 0;
 }
 #app .rightPanel .main .items .item .header {
-  color: #bbbbbb;
-  border-bottom: 1px solid #555555;
+  color: #9a9a9a;
+  border-bottom: 1px solid #343434;
   font-size: 11px;
   margin: 15px 10px 0 0;
   text-transform: uppercase;
@@ -278,11 +278,11 @@
   word-wrap: break-word;
 }
 #app .rightPanel .main .items .item .text a.toggle {
-  color: #869f33;
+  color: #14a4c3;
   font-weight: normal;
 }
 #app .rightPanel .main .items .item .text a.toggle:hover {
-  color: #a5c342;
+  color: #22c5e8;
 }
 #app .rightPanel .main .items .item .text a.toggle.more,
 #app .rightPanel .main .items .item .text a.toggle.less {
@@ -295,40 +295,40 @@
   color: #000;
 }
 #app .headerPanel a.imageBtn.first {
-  background-color: #787878;
+  background-color: #565656;
   background-image: url('../../img/uv-pagingheaderpanel-module/first.png');
   background-repeat: no-repeat;
   margin: 0 0 0 0;
 }
 #app .headerPanel a.imageBtn.first:hover {
-  background-color: #555555;
+  background-color: #343434;
 }
 #app .headerPanel a.imageBtn.prev {
-  background-color: #787878;
+  background-color: #565656;
   background-image: url('../../img/uv-pagingheaderpanel-module/prev.png');
   background-repeat: no-repeat;
   margin: 0 0 0 5px;
 }
 #app .headerPanel a.imageBtn.prev:hover {
-  background-color: #555555;
+  background-color: #343434;
 }
 #app .headerPanel a.imageBtn.next {
-  background-color: #787878;
+  background-color: #565656;
   background-image: url('../../img/uv-pagingheaderpanel-module/next.png');
   background-repeat: no-repeat;
   margin: 0 5px 0 0;
 }
 #app .headerPanel a.imageBtn.next:hover {
-  background-color: #555555;
+  background-color: #343434;
 }
 #app .headerPanel a.imageBtn.last {
-  background-color: #787878;
+  background-color: #565656;
   background-image: url('../../img/uv-pagingheaderpanel-module/last.png');
   background-repeat: no-repeat;
   margin: 0 0 0 0;
 }
 #app .headerPanel a.imageBtn.last:hover {
-  background-color: #555555;
+  background-color: #343434;
 }
 #app .headerPanel a.imageBtn.go {
   background: url('../../img/uv-pagingheaderpanel-module/go.png') no-repeat;
@@ -385,7 +385,7 @@
   text-align: right;
 }
 #app .headerPanel .centerOptions .mode label.disabled {
-  color: #bbbbbb;
+  color: #9a9a9a;
 }
 #app .headerPanel .centerOptions.modeOptionsDisabled {
   width: 280px;
@@ -478,19 +478,19 @@
   cursor: pointer !important;
 }
 #app .centerPanel .content #viewer .zoomIn:focus {
-  border: 1px solid lightskyblue !important;
+  border: 1px solid #14a4c3 !important;
 }
 #app .centerPanel .content #viewer .zoomOut {
   cursor: pointer !important;
 }
 #app .centerPanel .content #viewer .zoomOut:focus {
-  border: 1px solid lightskyblue !important;
+  border: 1px solid #14a4c3 !important;
 }
 #app .centerPanel .content #viewer .goHome {
   cursor: pointer !important;
 }
 #app .centerPanel .content #viewer .goHome:focus {
-  border: 1px solid lightskyblue !important;
+  border: 1px solid #14a4c3 !important;
 }
 #app .centerPanel .content #viewer div[title="Rotate left"] {
   display: none !important;
@@ -499,7 +499,7 @@
   cursor: pointer !important;
 }
 #app .centerPanel .content #viewer .rotate:focus {
-  border: 1px solid lightskyblue !important;
+  border: 1px solid #14a4c3 !important;
 }
 #app .centerPanel .content #viewer div[title="Previous page"] {
   display: none !important;
@@ -518,7 +518,7 @@
   background-position: 50% 50%;
 }
 #app .centerPanel .content .searchOverlay {
-  background-color: #869f33;
+  background-color: #14a4c3;
   opacity: 0.5;
   filter: alpha(opacity=50);
 }
@@ -534,7 +534,7 @@
 }
 #app .leftPanel .tabs .tab {
   color: #fff;
-  background-color: #1f1f1f;
+  background-color: #211f1f;
   display: inline-block;
   text-align: center;
   line-height: 22px;
@@ -549,14 +549,14 @@
 }
 #app .leftPanel .tabs .tab.on {
   border: 1px solid #373737;
-  border-bottom: 1px solid #1f1f1f;
-  color: #869f33;
+  border-bottom: 1px solid #211f1f;
+  color: #14a4c3;
   margin-bottom: -1px;
   height: 25px;
   line-height: 25px;
 }
 #app .leftPanel .tabs .tab:focus {
-  border: 1px solid lightskyblue;
+  border: 1px solid #14a4c3;
 }
 #app .leftPanel .tabsContent {
   padding: 10px 10px 10px 10px;
@@ -590,8 +590,8 @@
 }
 #app .leftPanel .tabsContent .btn-group .btn {
   padding: 0 5px 0 5px;
-  background: #787878;
-  color: #bbbbbb;
+  background: #565656;
+  color: #9a9a9a;
   width: 55px;
 }
 #app .leftPanel .tabsContent .btn-group .btn.on {
@@ -654,7 +654,7 @@
   overflow: hidden;
 }
 #app .leftPanel .views .treeView ul a.selected {
-  color: #869f33;
+  color: #14a4c3;
 }
 #app .leftPanel .views .thumbsView {
   overflow: auto;
@@ -694,7 +694,7 @@
   border: 2px solid #fff;
 }
 #app .leftPanel .views .thumbsView .thumbs .thumb.searchpreview .wrap {
-  border: 2px solid #869f33;
+  border: 2px solid #26b5cc;
 }
 #app .leftPanel .views .thumbsView .thumbs .thumb span {
   font-size: 11px;
@@ -800,7 +800,7 @@
   border: 2px solid #fff;
 }
 #app .leftPanel .views .galleryView .main .thumbs .thumb.searchpreview .wrap {
-  border: 2px solid #869f33;
+  border: 2px solid #26b5cc;
 }
 #app .leftPanel .views .galleryView .main .thumbs .thumb span {
   font-size: 11px;
@@ -835,7 +835,7 @@
   padding: 30px 9px 0 9px;
 }
 #app .footerPanel .searchResults .line {
-  background: #787878;
+  background: #565656;
   height: 2px;
 }
 #app .footerPanel .searchResults .searchResultPlacemarker {
@@ -902,7 +902,7 @@
 }
 #app .footerPanel .search {
   position: relative;
-  background-color: #1f1f1f;
+  background-color: #211f1f;
   height: 32px;
 }
 #app .footerPanel .search .searchTextContainer {
@@ -940,7 +940,7 @@
   height: 25px;
 }
 #app .footerPanel .search .searchTextContainer .autocomplete .result.selected {
-  background: #ffffff;
+  background: #efefef;
 }
 #app .footerPanel .search .searchTextContainer .searchText {
   width: 245px;
@@ -974,7 +974,7 @@
 }
 #app .footerPanel .searchPager {
   position: relative;
-  background-color: #1f1f1f;
+  background-color: #211f1f;
   height: 32px;
   overflow: hidden;
 }
@@ -1027,7 +1027,7 @@
 }
 #app .footerPanel .searchPager .controls a.clearSearch {
   cursor: pointer;
-  color: #869f33;
+  color: #26b5cc;
   text-decoration: none;
   margin: 0 0 0 10px;
   font-size: 12px;
@@ -1098,10 +1098,10 @@
   height: 12px;
 }
 ::-webkit-scrollbar-track {
-  background: #787878;
+  background: none;
 }
 ::-webkit-scrollbar-thumb {
-  background: #a5c342;
+  background: #565656;
 }
 html,
 body {
@@ -1135,12 +1135,12 @@ textarea {
   background-image: none;
 }
 a {
-  color: #869f33;
+  color: #26b5cc;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #a5c342;
+  color: #48c8dd;
   text-decoration: underline;
 }
 a:focus {
@@ -1163,7 +1163,7 @@ img {
   padding: 5px 5px 5px 5px;
   line-height: 1.42857143;
   background-color: #000;
-  border: 1px solid #787878;
+  border: 1px solid #565656;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -1178,7 +1178,7 @@ hr {
   margin-top: 17px;
   margin-bottom: 17px;
   border: 0;
-  border-top: 1px solid #ffffff;
+  border-top: 1px solid #efefef;
 }
 .sr-only {
   position: absolute;
@@ -1238,8 +1238,8 @@ fieldset[disabled] .btn {
 }
 .btn-default {
   color: #fff;
-  background-color: #787878;
-  border-color: #787878;
+  background-color: #565656;
+  border-color: #565656;
 }
 .btn-default:hover,
 .btn-default:focus,
@@ -1247,8 +1247,8 @@ fieldset[disabled] .btn {
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
   color: #fff;
-  background-color: #636363;
-  border-color: #595959;
+  background-color: #424242;
+  border-color: #383838;
 }
 .btn-default:active,
 .btn-default.active,
@@ -1270,13 +1270,13 @@ fieldset[disabled] .btn-default:active,
 .btn-default.disabled.active,
 .btn-default[disabled].active,
 fieldset[disabled] .btn-default.active {
-  background-color: #787878;
-  border-color: #787878;
+  background-color: #565656;
+  border-color: #565656;
 }
 .btn-primary {
   color: #fff;
-  background-color: #cc0000;
-  border-color: #cc0000;
+  background-color: #14a4c3;
+  border-color: #14a4c3;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -1284,8 +1284,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: #fff;
-  background-color: #a30000;
-  border-color: #8f0000;
+  background-color: #10859e;
+  border-color: #0e758b;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -1307,13 +1307,13 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #cc0000;
-  border-color: #cc0000;
+  background-color: #14a4c3;
+  border-color: #14a4c3;
 }
 .btn-secondary {
   color: #fff;
-  background-color: #869f33;
-  border-color: #869f33;
+  background-color: #14a4c3;
+  border-color: #14a4c3;
 }
 .btn-secondary:hover,
 .btn-secondary:focus,
@@ -1321,8 +1321,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-secondary.active,
 .open .dropdown-toggle.btn-secondary {
   color: #fff;
-  background-color: #6c8029;
-  border-color: #5f7124;
+  background-color: #10859e;
+  border-color: #0e758b;
 }
 .btn-secondary:active,
 .btn-secondary.active,
@@ -1344,8 +1344,8 @@ fieldset[disabled] .btn-secondary:active,
 .btn-secondary.disabled.active,
 .btn-secondary[disabled].active,
 fieldset[disabled] .btn-secondary.active {
-  background-color: #869f33;
-  border-color: #869f33;
+  background-color: #14a4c3;
+  border-color: #14a4c3;
 }
 .btn-warning {
   color: #fff;
@@ -1496,7 +1496,7 @@ fieldset[disabled] .btn-info.active {
   border-color: #5bc0de;
 }
 .btn-link {
-  color: #869f33;
+  color: #26b5cc;
   font-weight: normal;
   cursor: pointer;
   border-radius: 0;
@@ -1517,7 +1517,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #a5c342;
+  color: #48c8dd;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -1525,7 +1525,7 @@ fieldset[disabled] .btn-link {
 fieldset[disabled] .btn-link:hover,
 .btn-link[disabled]:focus,
 fieldset[disabled] .btn-link:focus {
-  color: #bbbbbb;
+  color: #9a9a9a;
   text-decoration: none;
 }
 .btn-lg {
@@ -1565,7 +1565,7 @@ input[type=range] {
 input[type=range]::-webkit-slider-runnable-track {
   width: 300px;
   height: 5px;
-  background: #bbbbbb;
+  background: #9a9a9a;
   border: none;
 }
 input[type=range]::-webkit-slider-thumb {
@@ -1574,14 +1574,14 @@ input[type=range]::-webkit-slider-thumb {
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: #787878;
+  background: #565656;
   margin-top: -5px;
 }
 input[type=range]:focus {
   outline: none;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #bbbbbb;
+  background: #9a9a9a;
 }
 /* Firefox */
 input[type=range] {
@@ -1600,7 +1600,7 @@ input[type=range]::-moz-range-thumb {
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: #787878;
+  background: #565656;
 }
 /*hide the outline behind the border*/
 input[type=range]:-moz-focusring {
@@ -1623,23 +1623,23 @@ input[type=range]::-ms-track {
   color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-  background: #bbbbbb;
+  background: #9a9a9a;
 }
 input[type=range]::-ms-fill-upper {
-  background: #bbbbbb;
+  background: #9a9a9a;
 }
 input[type=range]::-ms-thumb {
   border: none;
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: #787878;
+  background: #565656;
 }
 input[type=range]:focus::-ms-fill-lower {
-  background: #bbbbbb;
+  background: #9a9a9a;
 }
 input[type=range]:focus::-ms-fill-upper {
-  background: #ffffff;
+  background: #efefef;
 }
 .btn-default .caret {
   border-top-color: #fff;
@@ -1883,7 +1883,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .headerPanel .informationBox {
   background: #FFB81D;
-  color: #555555;
+  color: #343434;
   width: 100%;
   position: absolute;
   height: 40px;
@@ -1977,10 +1977,10 @@ input[type=range]:focus::-ms-fill-upper {
   display: block;
 }
 #app .leftPanel .closed .expandButton:focus {
-  border: 1px solid lightskyblue;
+  border: 1px solid #14a4c3;
 }
 #app .leftPanel .closed .expandFullButton:focus {
-  border: 1px solid lightskyblue;
+  border: 1px solid #14a4c3;
 }
 #app.browser-Explorer.browser-version-8 .leftPanel .closed .title {
   writing-mode: tb-lr;
@@ -2047,10 +2047,10 @@ input[type=range]:focus::-ms-fill-upper {
   display: block;
 }
 #app .rightPanel .closed .expandButton:focus {
-  border: 1px solid lightskyblue;
+  border: 1px solid #14a4c3;
 }
 #app .rightPanel .closed .expandFullButton:focus {
-  border: 1px solid lightskyblue;
+  border: 1px solid #14a4c3;
 }
 #app .rightPanel .main {
   margin-right: 10px;
@@ -2069,8 +2069,8 @@ input[type=range]:focus::-ms-fill-upper {
   line-height: 30px;
 }
 #app .centerPanel .content .acknowledgements {
-  background: #555555;
-  background: rgba(85, 85, 85, 0.7);
+  background: #343434;
+  background: rgba(52, 52, 52, 0.7);
   position: absolute;
   width: 190px;
   padding: 10px 10px 10px 10px;
@@ -2107,19 +2107,19 @@ input[type=range]:focus::-ms-fill-upper {
   max-width: 100px;
 }
 #app .centerPanel .content .acknowledgements .main a:not(.toggle) {
-  color: #869f33;
+  color: #26b5cc;
 }
 #app .centerPanel .content .acknowledgements .main a:not(.toggle):link {
-  color: #869f33;
+  color: #26b5cc;
 }
 #app .centerPanel .content .acknowledgements .main a:not(.toggle):hover {
-  color: #869f33;
+  color: #26b5cc;
 }
 #app .centerPanel .content .acknowledgements .main a:not(.toggle):visited {
-  color: #869f33;
+  color: #26b5cc;
 }
 #app .centerPanel .content .acknowledgements .main a:not(.toggle):active {
-  color: #869f33;
+  color: #26b5cc;
 }
 #app .centerPanel .content .acknowledgements .main .attribution {
   overflow: hidden;
@@ -2371,7 +2371,7 @@ input[type=range]:focus::-ms-fill-upper {
   width: 24px;
   height: 24px;
   float: right;
-  background-color: #cc0000;
+  background-color: #14a4c3;
 }
 #app .overlay .middle {
   width: 100%;
@@ -2479,7 +2479,7 @@ input[type=range]:focus::-ms-fill-upper {
   cursor: pointer;
 }
 #app .imageBtn:focus {
-  border: 1px solid lightskyblue;
+  border: 1px solid #14a4c3;
 }
 #app .action,
 #app a.action.black,
@@ -2492,7 +2492,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .headerPanel {
   position: relative;
-  background-color: #1f1f1f;
+  background-color: #211f1f;
   color: #fff;
   height: 40px;
 }
@@ -2505,16 +2505,16 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .leftPanel {
   position: absolute;
-  background: #1f1f1f;
-  border: 1px solid #373737;
+  background: #211f1f;
+  border: none;
 }
 #app .centerPanel {
   position: absolute;
 }
 #app .rightPanel {
   position: absolute;
-  background: #1f1f1f;
-  border: 1px solid #373737;
+  background: #211f1f;
+  border: none;
 }
 #app .footerPanel {
   position: relative;
@@ -2538,47 +2538,6 @@ input[type=range]:focus::-ms-fill-upper {
 #app .headerPanel .options .centerOptions .nextOptions {
   margin: 0 0 0 10px;
 }
-#app .overlay .top .close {
-  background-image: url('../../img/close.png');
-  background-repeat: no-repeat;
-  height: 24px;
-  line-height: 24px;
-  cursor: pointer;
-  color: #fff;
-  text-decoration: none;
-  background-position: right center;
-  padding-right: 34px;
-  padding-left: 10px;
-}
-#app .overlay .top .close:link,
-#app .overlay .top .close:visited,
-#app .overlay .top .close:hover,
-#app .overlay .top .close:active {
-  color: #fff;
-  text-decoration: none;
-}
-#app .overlay .middle .content {
-  padding-top: 10px;
-}
-#app .overlay .middle .content h1 {
-  margin: 0 0 0 0;
-  border-bottom: 1px solid #bbbbbb;
-}
-#app .footerPanel .search {
-  border: 1px solid #555555;
-}
-#app .footerPanel .searchPager {
-  border: 1px solid #555555;
-}
-#app .footerPanel .searchPager .controls {
-  margin-top: 0px;
-}
 #app .footerPanel .searchPager .controls .searchResultsInfo {
   width: 290px;
-}
-#app .footerPanel .searchResults .searchResultPlacemarker {
-  background: url('../../img/placemarker_down.png');
-}
-#app .footerPanel .searchOptions {
-  margin: 3px 0 0 0;
 }
