--- a/uv/themes/uv-en-GB-theme/css/uv-pdf-extension/theme.css
+++ b/uv/themes/uv-en-GB-theme/css/uv-pdf-extension/theme.css
@@ -33,7 +33,7 @@
 #app .overlay.embed .middle .secondRow textarea.code {
   width: 100%;
   height: 90px;
-  background: #ffffff;
+  background: #EFEFEF;
   border: 1px solid #bbbbbb;
   font-size: 11px;
 }
@@ -153,7 +153,7 @@
   padding: 0;
 }
 #app .overlay.download .middle ol.options li.group {
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid #EFEFEF;
 }
 #app .overlay.download .middle ol.options li.group:last-child {
   border-bottom: none;
@@ -2448,7 +2448,7 @@ hr {
   margin-top: 17px;
   margin-bottom: 17px;
   border: 0;
-  border-top: 1px solid #ffffff;
+  border-top: 1px solid #EFEFEF;
 }
 .sr-only {
   position: absolute;
@@ -2909,7 +2909,7 @@ input[type=range]:focus::-ms-fill-lower {
   background: #bbbbbb;
 }
 input[type=range]:focus::-ms-fill-upper {
-  background: #ffffff;
+  background: #EFEFEF;
 }
 .btn-default .caret {
   border-top-color: #fff;
